Add network policies for cloudprober
Related-Prod: https://mirantis.jira.com/browse/PRODX-35448
Change-Id: I1675da3eee4e7af13f1cfe64b677ca0e8b89cfb4

--- a/openstack_controller/templates/child_objects/cloudprober.yaml
+++ b/openstack_controller/templates/child_objects/cloudprober.yaml
@@ -15,3 +15,7 @@ cloudprober:
       pod_labels:
         application: cloudprober
         component: prober
+      ports:
+      - port: 9313
+        name: cloudprober
+        protocol: TCP
