--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -53,6 +53,7 @@ keystone:
           - {{ to_child_object("shared-file-system", "manila", "Deployment", "manila-api", ["m-api"]) | indent(12)}}
           - {{ to_child_object("dns", "designate", "StatefulSet", "designate-api", ["dns-api"]) | indent(12)}}
           - {{ to_child_object("key-manager", "barbican", "Deployment", "barbican-api", ["b-api"]) | indent(12)}}
+          - {{ to_child_object("cloudprober", "cloudprober", "Deployment", "openstack-cloudprober", ["cloudprober"]) | indent(12)}}
       hash_fields: []
       images:
       - keystone_client
