--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -297,4 +297,7 @@ network_policies:
     key-manager:barbican:Deployment:barbican-api:
       - from:
         - default: selector
+    cloudprober:cloudprober:Deployment:openstack-cloudprober:
+      - from:
+        - default: selector
   egress: {}
