Add network policy for OS controller exporter
Related-Prod: PRODX-34776
Change-Id: Ia1bf581f79a1ed53ad1c79c5305e4f2aad1157fe

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -229,3 +229,5 @@ exporter:
           key_name: client_cert
     raw:
       OSCTL_EXPORTER_BIND_PORT: 9102
+  network_policy:
+    enabled: false
