--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -298,6 +298,9 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 9292
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
@@ -308,6 +311,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: tf
+                ports:
+                - port: 9292
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: glance
