--- a/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -105,6 +105,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8041
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: gnocchi
