--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -455,6 +455,9 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 9696
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
@@ -462,6 +465,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 9696
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: neutron
