--- a/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/placement/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -141,6 +141,9 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 8778
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
@@ -148,6 +151,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8778
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: placement
