--- a/openstack_controller/templates/base/network_policies/compute.yaml
+++ b/openstack_controller/templates/base/network_policies/compute.yaml
@@ -2,43 +2,43 @@
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set api_ns_list = ["os_controller", "lma_deployment", "tf_deployment"] | namespaces  %}
 {%- set metadata_ns_list = ["tf_deployment"] | namespaces  %}
+{%- set nova_api = "compute:nova:Deployment:nova-api-osapi" %}
+{%- set nova_metadata = "compute:nova:Deployment:nova-api-metadata" %}
+{%- set nova_novnc = "compute:nova:Deployment:nova-novncproxy" %}
         metadata:
           spec:
             podSelector:
               matchLabels:
-                application: nova
-                component: metadata
+{{ service_childs[nova_metadata].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
 # Pods with host network such as neutron-metadata
-{{ network_policies["ingress"]["compute:nova:Deployment:nova-api-metadata"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][nova_metadata] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_pod_networks(pod_networks) | indent(18) }}
+{{ from_pod_networks(pod_networks, service_childs[nova_metadata].get_np_ports(["n-metadata"])) | indent(16) }}
               - from:
-{{ from_namespaces(metadata_ns_list) | indent(18) }}
+{{ from_namespaces(metadata_ns_list, service_childs[nova_metadata].get_np_ports(["n-metadata"])) | indent(16) }}
         api:
           spec:
             podSelector:
               matchLabels:
-                application: nova
-                component: os-api
+{{ service_childs[nova_api].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["compute:nova:Deployment:nova-api-osapi"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][nova_api] | toyaml | indent(14, first=True) }}
               - from:
 # Pods with host network such as octavia-worker
-{{ from_pod_networks(pod_networks) | indent(18) }}
+{{ from_pod_networks(pod_networks, service_childs[nova_api].get_np_ports(["n-api"])) | indent(16) }}
               - from:
-{{ from_namespaces(api_ns_list) | indent(18) }}
+{{ from_namespaces(api_ns_list, service_childs[nova_api].get_np_ports(["n-api"])) | indent(16) }}
         novncproxy:
           spec:
             podSelector:
               matchLabels:
-                application: nova
-                component: novnc-proxy
+{{ service_childs[nova_novnc].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["compute:nova:Deployment:nova-novncproxy"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][nova_novnc] | toyaml | indent(14, first=True) }}
