--- a/openstack_controller/templates/base/network_policies/identity.yaml
+++ b/openstack_controller/templates/base/network_policies/identity.yaml
@@ -1,17 +1,17 @@
 {%- from 'macros/connections.j2' import from_pod_networks %}
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set ns_list = ["os_controller", "ceph_deployment", "lma_deployment", "tf_deployment"] | namespaces  %}
+{%- set keystone_api = "identity:keystone:Deployment:keystone-api" %}
         api:
           spec:
             podSelector:
               matchLabels:
-                application: keystone
-                component: api
+{{ service_childs[keystone_api].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["identity:keystone:Deployment:keystone-api"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][keystone_api] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_pod_networks(pod_networks) | indent(18) }}
+{{ from_pod_networks(pod_networks, service_childs[keystone_api].get_np_ports(["ks-pub"])) | indent(16) }}
               - from:
-{{ from_namespaces(ns_list) | indent(18) }}
+{{ from_namespaces(ns_list, service_childs[keystone_api].get_np_ports(["ks-pub"])) | indent(16) }}
