--- a/openstack_controller/templates/base/network_policies/orchestration.yaml
+++ b/openstack_controller/templates/base/network_policies/orchestration.yaml
@@ -1,26 +1,26 @@
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set ns_list = ["os_controller", "lma_deployment"] | namespaces  %}
+{%- set heat_api = "orchestration:heat:Deployment:heat-api" %}
+{%- set heat_cfn = "orchestration:heat:Deployment:heat-cfn" %}
         api:
           spec:
             podSelector:
               matchLabels:
-                application: heat
-                component: api
+{{ service_childs[heat_api].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["orchestration:heat:Deployment:heat-api"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][heat_api] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_namespaces(ns_list) | indent(18) }}
+{{ from_namespaces(ns_list, service_childs[heat_api].get_np_ports(["h-api"])) | indent(16) }}
         cfn:
           spec:
             podSelector:
               matchLabels:
-                application: heat
-                component: cfn
+{{ service_childs[heat_cfn].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["orchestration:heat:Deployment:heat-cfn"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][heat_cfn] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_namespaces(ns_list) | indent(18) }}
+{{ from_namespaces(ns_list, service_childs[heat_cfn].get_np_ports(["h-cfn"])) | indent(16) }}
