--- a/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -60,6 +60,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8042
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: aodh
