--- a/tests/fixtures/render_service_template/output/baremetal/yoga_ceph_local_non_dvr_ironic_mt.yaml
+++ b/tests/fixtures/render_service_template/output/baremetal/yoga_ceph_local_non_dvr_ironic_mt.yaml
@@ -234,6 +234,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 6385
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: ironic
