--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -276,6 +276,9 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 8776
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
@@ -283,6 +286,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8776
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: cinder
