--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -457,6 +457,9 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 8774
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
@@ -467,6 +470,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: tf
+                ports:
+                - port: 8774
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: nova
@@ -481,10 +487,16 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 8775
+                  protocol: TCP
               - from:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: tf
+                ports:
+                - port: 8775
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: nova
