--- a/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -232,6 +232,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8004
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: heat
@@ -250,6 +253,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8000
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: heat
