--- a/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr_telemetry.yaml
@@ -227,6 +227,9 @@ spec:
                 - namespaceSelector:
                     matchLabels:
                       kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 8786
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: manila
