--- a/openstack_controller/templates/child_objects/load-balancer.yaml
+++ b/openstack_controller/templates/child_objects/load-balancer.yaml
@@ -36,6 +36,10 @@ octavia:
       pod_labels:
         application: octavia
         component: api
+      ports:
+      - port: 9876
+        name: o-api
+        protocol: TCP
     octavia-housekeeping:
       connections:
         egress:
