--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -300,4 +300,7 @@ network_policies:
     cloudprober:cloudprober:Deployment:openstack-cloudprober:
       - from:
         - default: selector
+    load-balancer:octavia:Deployment:octavia-api:
+      - from:
+        - default: selector
   egress: {}
