Fix setting liveness probes for osdpl containers
* Increase failureTreshold for osdpl to 10 to avoid restarts
on loaded nodes.
* Pick liveness params for containers from correct place.

Related-Prod: PRODX-3456
Change-Id: Ic7b0a22e1bb7075c585f98d454058c6ae2a5f31f

--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -114,7 +114,7 @@ spec:
               command:
                 - curl
                 - http://127.0.0.1:32768/healthz
-            {{- toYaml .Values.osdpl.pod.controller.secrets.liveness.params | nindent 12}}
+            {{- toYaml .Values.osdpl.pod.controller.osdpl.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
@@ -354,7 +354,7 @@ spec:
               command:
                 - curl
                 - http://127.0.0.1:32775/healthz
-            {{- toYaml .Values.osdpl.pod.controller.secrets.liveness.params | nindent 12}}
+            {{- toYaml .Values.osdpl.pod.controller.osdplstatus.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
@@ -394,7 +394,7 @@ spec:
               command:
                 - curl
                 - http://127.0.0.1:32776/healthz
-            {{- toYaml .Values.osdpl.pod.controller.secrets.liveness.params | nindent 12}}
+            {{- toYaml .Values.osdpl.pod.controller.osdplsecret.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
