Add network policy for OS admission controller
Related-Prod: PRODX-35764
Change-Id: I452256e78f379fdfc1a3155c178eae8540f69ecd

--- a/charts/openstack-operator/templates/admission-controller.yaml
+++ b/charts/openstack-operator/templates/admission-controller.yaml
@@ -106,7 +106,7 @@ spec:
             - /opt/operator/uwsgi.ini
           ports:
             - name: https
-              containerPort: 8443
+              containerPort: {{ .Values.admission.settings.raw.OSCTL_ADMISSION_BIND_PORT }}
               protocol: TCP
           livenessProbe:
             httpGet:
