Add network policy for dashboard
Related-Prod: PRODX-35769
Change-Id: I173494ee44eebb4050ed6a52b189cd8efc51de96

--- a/openstack_controller/templates/child_objects/dashboard.yaml
+++ b/openstack_controller/templates/child_objects/dashboard.yaml
@@ -24,3 +24,7 @@ horizon:
       pod_labels:
         application: horizon
         component: server
+      ports:
+        - name: web
+          port: 4999
+          protocol: TCP
