--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -303,4 +303,7 @@ network_policies:
     load-balancer:octavia:Deployment:octavia-api:
       - from:
         - default: selector
+    dashboard:horizon:Deployment:horizon:
+      - from:
+        - default: selector
   egress: {}
