--- a/openstack_controller/templates/child_objects/ingress.yaml
+++ b/openstack_controller/templates/child_objects/ingress.yaml
@@ -21,6 +21,7 @@ ingress:
           - {{ to_child_object("dns", "designate", "StatefulSet", "designate-api", ["dns-api"]) | indent(12)}}
           - {{ to_child_object("key-manager", "barbican", "Deployment", "barbican-api", ["b-api"]) | indent(12)}}
           - {{ to_child_object("load-balancer", "octavia", "Deployment", "octavia-api", ["o-api"]) | indent(12)}}
+          - {{ to_child_object("dashboard", "horizon", "Deployment", "horizon", ["web"]) | indent(12)}}
       hash_fields: []
       images:
       - ingress
