--- a/openstack_controller/templates/services/dashboard.yaml
+++ b/openstack_controller/templates/services/dashboard.yaml
@@ -36,8 +36,12 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/dashboard.yaml' %}
+{%- endif %}
       manifests:
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         secret_ca_bundle: true
       network:
         proxy:
