Always use single nova-compute for ironic case
The code is so buggy that upstream switched to active-passive deployment
topology. Since we do not have known customers with more than 1k ironic nodes
should be more than enough for us.

Related-Prod: PRODX-29498
Change-Id: I3d960edb5ffd6743d8ca9d469a0404bb8a67d7da

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -162,7 +162,8 @@ services:
             scheduler: 7
             novncproxy: 3
             placement: 4
-            compute_ironic: 3
+            # Byggy code, give up and use 1 instance
+            compute_ironic: 1
           lifecycle:
             disruption_budget:
               metadata:
