[image precaching] Fix sysdig for 5.2.6, 5.2.7
Fixed:

5.2.7 Container with NET_RAW capability
5.2.6 (1) Container with RunAsUser root or not set
5.2.6 (2) Container permitting root
5.2.6 (4) Container uid is host range

Related-Prod: https://mirantis.jira.com/browse/PRODX-34725
Change-Id: Id861e400bf52370f04961cfc567382337aa42c4e
(cherry picked from commit 6a793fda7afd582a8f61a6d6ab906cf4a5c78f17)

--- a/openstack_controller/templates/native/cache.yaml
+++ b/openstack_controller/templates/native/cache.yaml
@@ -38,4 +38,11 @@ spec:
         image: {{ url }}
 {# not all images support "/bin/sleep infinity" #}
         command: ["/bin/sleep", "86400000"]
+        securityContext:
+          capabilities:
+            drop:
+            - NET_RAW
 {%- endfor %}
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534
