--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -53,13 +53,7 @@ spec:
     spec:
       serviceAccountName: openstack-controller-account
       securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-        # NOTE(vsaienko): The range 32768 60999 is default range used by application
-        # to bind on local ports. Exclude 32768 - 32799 and use them for health probes
-        sysctls:
-        - name: net.ipv4.ip_local_port_range
-          value: 32800 60999
+        {{- toYaml .Values.osdpl.pod.controller.security_context | nindent 8 }}
       initContainers:
         - name: remove-default-finalizer
           command:
@@ -117,6 +111,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.osdpl.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.osdpl.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -157,6 +153,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.secrets.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.secrets.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -197,6 +195,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.health.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.health.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -237,6 +237,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.node.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.node.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -280,6 +282,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.node_maintenance_request.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.node_maintenance_request.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -317,6 +321,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.ceph_secrets.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.ceph_secrets.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -357,6 +363,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.osdplstatus.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.osdplstatus.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -397,6 +405,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.osdplsecret.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.osdplsecret.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
@@ -433,6 +443,8 @@ spec:
             {{- toYaml .Values.osdpl.pod.controller.tf_secrets.liveness.params | nindent 12}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.osdpl.pod.controller.tf_secrets.security_context | nindent 12 }}
           volumeMounts:
             - name: os-clouds
               mountPath: /etc/openstack/
