--- a/openstack_controller/templates/child_objects/messaging.yaml
+++ b/openstack_controller/templates/child_objects/messaging.yaml
@@ -21,7 +21,7 @@ rabbitmq:
     openstack-rabbitmq-cluster-wait:
       connections:
         egress:
-          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["http"]) | indent(12)}}
       hash_fields:
       - endpoints.oslo_messaging.*
       images:
