Allow to set geneve for tenantn network types and ovn
Related-Prod: PRODX-35756
Change-Id: Id4eb1701a349028cb8374a1c0ce4385c0d16b938

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -998,6 +998,7 @@ properties:
                 - flat
                 - vlan
                 - vxlan
+                - geneve
           external_networks:
             type: array
             items:
