Restart OVS with honor of maintenancerequests
When restart of openvswitch is required implement the following logic
* If cluster is under maintenance and clustermaintenancerequest exist
  restart OVS only on nodes after nodemaintenancerequest is removed
* If cluster not under mainteanance restart ovs automatically only when
  maintenance/openvswitch_restart_mode is set to auto (by default)

Related-Prod: PRODX-36580
Change-Id: Icba1c85de12943a2a0712a51541f2e30ab3096dd

--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -54,3 +54,16 @@ ndr_skip_instance_check = False
 # which means that node removal will be blocked unless at least 1 volume exists on host.
 # Volume is tied to specific host only for LVM backend.
 ndr_skip_volume_check = False
+
+# Flag to define openvswitch-vswitchd restart mode. One of "manual" or "auto"
+# auto   - openvswitch-vswitchd is restarted according to the following rules:
+#          - if cluster is under maintenance, clustermaintenancerequest exists. We restart openvswitch
+#            only when LCM finished update on the node (nodeworkloadlock is removed)
+#          - if cluster not under maintenance, no clustermainteancerequest exists. We restart openvswitch
+#            one by one with waiting readiness.
+# manual - openvswitch-vswitchd is restarted according to the following rules:
+#          - if cluster is under maintenance, clustermaintenancerequest exists. We restart openvswitch
+#            only when LCM finished update on the node (nodeworkloadlock is removed)
+#          - for other cases do not restart pod automatically, end user should do it for example with
+#            openstack version upgrade.
+openvswitch_restart_mode = "auto"
