--- a/openstack_controller/templates/size/single.yaml
+++ b/openstack_controller/templates/size/single.yaml
@@ -210,7 +210,7 @@ services:
           lifecycle:
             upgrades:
               daemonsets:
-                pod_replacement_strategy: RollingUpdate
+                pod_replacement_strategy: OnDelete
                 ovs_db:
                   max_unavailable: 1
                 ovs_vswitchd:
