--- a/openstack_controller/templates/size/small.yaml
+++ b/openstack_controller/templates/size/small.yaml
@@ -264,7 +264,7 @@ services:
           lifecycle:
             upgrades:
               daemonsets:
-                pod_replacement_strategy: RollingUpdate
+                pod_replacement_strategy: OnDelete
                 ovs_db:
                   max_unavailable: 1
                 ovs_vswitchd:
