Increase timeout/interval for etcd
Use 500ms for heartbeats and 5s for leader timeout.

Related-Prod: PRODX-36708
Change-Id: I0aeb84eae8d7359dc4f399ae383c504baeeb4057

--- a/openstack_controller/templates/services/coordination.yaml
+++ b/openstack_controller/templates/services/coordination.yaml
@@ -24,6 +24,10 @@ spec:
       network_policy:
 {% include 'base/network_policies/coordination.yaml' %}
 {%- endif %}
+      conf:
+        etcd:
+          ETCD_ELECTION_TIMEOUT: 5000
+          ETCD_HEARTBEAT_INTERVAL: 500
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
       pod:
