--- a/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -50,3 +50,7 @@ spec:
               default: requiredDuringSchedulingIgnoredDuringExecution
       volume:
         class_name: lvp-fake-root
+      conf:
+        etcd:
+          ETCD_ELECTION_TIMEOUT: 5000
+          ETCD_HEARTBEAT_INTERVAL: 500
